--- a/templates/defpackage/tsconfig.json
+++ b/templates/defpackage/tsconfig.json
@@ -18,6 +18,9 @@
     "module": "commonjs",
     "isolatedModules": true,
     "noEmitOnError": true,
-    "jsx": "react"
+    "jsx": "react",
+    "typeRoots": [
+      "./node_modules/@types"
+    ]
   }
 }
